@@ -1,3 +1,6 @@
+4535.	[bug]		Address race condition in setting / testing of
+			DNS_REQUEST_F_SENDING. [RT #43889]
+
 4534.	[bug]		Only set RD, RA and CD in QUERY responses. [RT #43879]
 
 4533.	[bug]		dns_client_update should terminate on prerequisite
